[package]
name = "szkdcm"
version = "0.1.0"
edition = "2024"
authors = ['Yuki SUZUKI']
repository = "https://github.com/ykszk/szkdcm"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
dicom-core = "0.8.1"
dicom-dictionary-std = "0.8.0"
dicom-dump = { version = "0.8.0", default-features = false, features = [] }
dicom-object = "0.8.1"
env_logger = "0.11.8"
log = "0.4.27"
rayon = "1.10.0"
